# CUBAC

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Horstmann.xlsx  LICENSE.txt  README.md  UNIFAC_Poling_Example.ipynb
dev/: GC-VTPR.xlsx  Kang.xlsx  deconstruct_GC_VTPR.py  deconstruct_Guennec_data.py  deconstruct_Horstmann.py  deconstruct_Kang2015.py  group_data_schema.json  group_decompositions.json  interaction_schema.json
examples/: Poling.cpp  VTPR.cpp  methane_water.cpp  speed_test.cpp
fit_cubic_params/: CMakeLists.txt  cubac.cpp  fitMathiasCopeman.py
include/: UNIFAQ.h  UNIFAQLibrary.h
notebooks/: Excess_calculations.ipynb  Spinodal.ipynb  UNIFAC_Poling_Example.ipynb
src/: UNIFAQ.cpp  UNIFAQLibrary.cpp
